Add JSHint and other tasks

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "homepage": "https://github.com/czerwin88/Zadanie_8_3#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0"
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-sass": "^2.0.0"
   }
 }
